--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,14 +1,14 @@
 
 <div class="card text-center">
      
-    <div class="card-body" style="background-color: #FF8A08 ; color:#fff">
+    <div class="card-body rounded-0" style="background-color: #ecd448 ; color:#0D1282">
       <h5 class="card-title">Get Special Offers</h5>
       <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
       <div class="card-header">
         Maharashtra Pune, India
       </div>
     </div>
-    <div class="card-footer text-body-secondary"  style="background-color: #FB8B24; color:#fff">
+    <div class="card-footer text-body-secondary"  style="background-color: #ecd448; color:#fff">
       Shopsy &copy;2024 | All rights reserved 
     </div>
   </div>
