--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&family=Poppins&display=swap');
 .navbar{
-    background-color: #ffffff;
+    background-color: #ecd448;
     height: 5rem;
 }
 .container-fluid{
-    background-color: #ffffff;
+    background-color: #ecd448;
 }
 .navbar-brand{
     color:#172774;
