added single product component

--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -20,7 +20,7 @@
               <button id="crt-btn">Add to cart</button>
             </div>
             <div class="col-6">
-              <button id="bn-btn">Buy Now</button>
+              <button id="bn-btn" routerLink="/single-prod">Buy Now</button>
             </div>
           </div>
         </div>
