--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,16 @@
 
 <app-navbar></app-navbar>
 
-<div class="container">
+
    <!-- Content here --> 
    
-   <app-catogory-cards ></app-catogory-cards>
-</div>
+   <!-- <app-catogory-cards ></app-catogory-cards> -->
+   <div class="container my-4">
+      <router-outlet />
+   </div>
+   
+
 <app-footer></app-footer>
   
 
-<router-outlet />
+
