--- a/src/app/catogory-cards/catogory-cards.component.html
+++ b/src/app/catogory-cards/catogory-cards.component.html
@@ -1,16 +1,16 @@
-<div class="container-fluid my-5">
+<!-- <div class="container-fluid my-5">
       
       <div class="d-flex align-items-center justify-content-center">
             <h2 class="fw-bold" style="color: #172774;">Shopsy's<span class="badge  mx-2" style="background-color: #FF6500;">New Launches</span></h2>
       </div>
       <app-carousel></app-carousel> 
       <app-filters (productsByPrice)="productsByPrice($event)"></app-filters>
-      <app-catogory-btns (updateProducts)="updateProducts($event)" ></app-catogory-btns>'
+      <app-catogory-btns (updateProducts)="updateProducts($event)" ></app-catogory-btns>
       <app-card [childArray]="products"></app-card>
 
 
       
-</div>
+</div> -->
 
 <!-- <div class="container-fluid my-5">
       <app-filters (productsByPrice)="updateProductsByPrice($event)" [selectedCategory]="selectedCategory"></app-filters>
