--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg sticky-top shadow p-3 " > 
+<nav class="navbar navbar-expand-lg sticky-top shadow" > 
   <div class="container-fluid ">
     <a class="navbar-brand fw-bold fs-3" href="#">
       <img src="assets/shopper.png" alt="Logo" width="30" height="24" id="logo" class="d-inline-block align-text-top">
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Features</a>
