--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
    <!-- Content here --> 
    
    <!-- <app-catogory-cards ></app-catogory-cards> -->
-   <div class="container my-4">
+   <div class="container-fluid">
       <router-outlet />
    </div>
    
