--- a/src/app/single-product-page/single-product-page.component.html
+++ b/src/app/single-product-page/single-product-page.component.html
@@ -2,7 +2,8 @@
 
     <!-- Example Code -->
 
-    <div class="container-fluid d-flex my-6  ">
+    <div class="container p-5">
+      <div class=" d-flex my-6  ">
         <div class="row">
           <div class="col-12 col-md-4 justify-content-center">
             <div class="text-center h-100">
@@ -40,162 +41,12 @@
           </div> 
         </div>
     </div>
-  
-    <div class="d-flex justify-content-center">
-        <h3>Explore <span class="badge " style="background-color: #FF6500;">New Products</span></h3>
+
+    <app-new-products> </app-new-products>
     </div>
-
-      <div class="container d-flex mt-4">
-        <div class="row">
-          <div class="col-6 col-md-3 mb-3 justify-content-center">
-            <div class="text-center h-100">
-              <img
-                src="https://via.placeholder.com/800x400.png?text=Image+1"
-                class="rounded w-100 h-100 cover-image"
-                alt="..."
-              />
-            </div>
-          </div>
-          <div class="col-6 col-md-3 mb-3 justify-content-center">
-            <div class="text-center h-100">
-              <img
-                src="https://via.placeholder.com/800x400.png?text=Image+2"
-                class="rounded w-100 h-100 cover-image"
-                alt="..."
-              />
-            </div>
-          </div>
-          <div class="col-6 col-md-3 mb-3 justify-content-center">
-            <div class="text-center h-100">
-              <img
-                src="https://via.placeholder.com/800x400.png?text=Image+3"
-                class="rounded w-100 h-100 cover-image"
-                alt="..."
-              />
-            </div>
-          </div>
-          <div class="col-6 col-md-3 mb-3 justify-content-center">
-            <div class="text-center h-100">
-              <img
-                src="https://via.placeholder.com/800x400.png?text=Image+4"
-                class="rounded w-100 h-100 cover-image"
-                alt="..."
-              />
-            </div>
-          </div>
-          <div class="col-6 col-md-3 mb-3 justify-content-center">
-            <div class="text-center h-100">
-              <img
-                src="https://via.placeholder.com/800x400.png?text=Image+2"
-                class="rounded w-100 h-100 cover-image"
-                alt="..."
-              />
-            </div>
-          </div>
-          <div class="col-6 col-md-3 mb-3 justify-content-center">
-            <div class="text-center h-100">
-              <img
-                src="https://via.placeholder.com/800x400.png?text=Image+2"
-                class="rounded w-100 h-100 cover-image"
-                alt="..."
-              />
-            </div>
-          </div>
-          <div class="col-6 col-md-3 mb-3 justify-content-center">
-            <div class="text-center h-100">
-              <img
-                src="https://via.placeholder.com/800x400.png?text=Image+2"
-                class="rounded w-100 h-100 cover-image"
-                alt="..."
-              />
-            </div>
-          </div>
-
-          <div class="col-6 col-md-3 mb-3 justify-content-center">
-            <div class="text-center h-100">
-              <img
-                src="https://via.placeholder.com/800x400.png?text=Image+2"
-                class="rounded w-100 h-100 cover-image"
-                alt="..."
-              />
-            </div>
-          </div>
-          <div class="col-6 col-md-3 mb-3 justify-content-center">
-            <div class="text-center h-100">
-              <img
-                src="https://via.placeholder.com/800x400.png?text=Image+2"
-                class="rounded w-100 h-100 cover-image"
-                alt="..."
-              />
-            </div>
-          </div>
-          <div class="col-6 col-md-3 mb-3 justify-content-center">
-            <div class="text-center h-100">
-              <img
-                src="https://via.placeholder.com/800x400.png?text=Image+2"
-                class="rounded w-100 h-100 cover-image"
-                alt="..."
-              />
-            </div>
-          </div>
-          <div class="col-6 col-md-3 mb-3 justify-content-center">
-            <div class="text-center h-100">
-              <img
-                src="https://via.placeholder.com/800x400.png?text=Image+2"
-                class="rounded w-100 h-100 cover-image"
-                alt="..."
-              />
-            </div>
-          </div>
-          <div class="col-6 col-md-3 mb-3 justify-content-center">
-            <div class="text-center h-100">
-              <img
-                src="https://via.placeholder.com/800x400.png?text=Image+2"
-                class="rounded w-100 h-100 cover-image"
-                alt="..."
-              />
-            </div>
-          </div>
-          <div class="col-6 col-md-3 mb-3 justify-content-center">
-            <div class="text-center h-100">
-              <img
-                src="https://via.placeholder.com/800x400.png?text=Image+2"
-                class="rounded w-100 h-100 cover-image"
-                alt="..."
-              />
-            </div>
-          </div>
-          <div class="col-6 col-md-3 mb-3 justify-content-center">
-            <div class="text-center h-100">
-              <img
-                src="https://via.placeholder.com/800x400.png?text=Image+2"
-                class="rounded w-100 h-100 cover-image"
-                alt="..."
-              />
-            </div>
-          </div>
-          <div class="col-6 col-md-3 mb-3 justify-content-center">
-            <div class="text-center h-100">
-              <img
-                src="https://via.placeholder.com/800x400.png?text=Image+2"
-                class="rounded w-100 h-100 cover-image"
-                alt="..."
-              />
-            </div>
-          </div>
-          <div class="col-6 col-md-3 mb-3 justify-content-center">
-            <div class="text-center h-100">
-              <img
-                src="https://via.placeholder.com/800x400.png?text=Image+2"
-                class="rounded w-100 h-100 cover-image"
-                alt="..."
-              />
-            </div>
-          </div>
-        </div>
+  
     
-        
-      </div>
+
      
 
 
