--- a/src/app/single-product-page/single-product-page.component.html
+++ b/src/app/single-product-page/single-product-page.component.html
@@ -29,10 +29,10 @@
               MediaTek G85 ; Enhance gaming with 1GHz GPU | 12GB of RAM including
               6GB virtual | 6.74" HD+ 90Hz display with Corning Gorilla Glass 3
               Protection | 50MP AI Triple camera |Fast Side fingerprint | 5000mAh
-              Battery Processor: High performance MediaTek G85 ; Enhance gaming
+              <!-- Battery Processor: High performance MediaTek G85 ; Enhance gaming
               with 1GHz GPU | 12GB of RAM including 6GB virtual | 6.74" HD+ 90Hz
               display with Corning Gorilla Glass 3 Protection | 50MP AI Triple
-              camera |Fast Side fingerprint | 5000mAh Battery
+              camera |Fast Side fingerprint | 5000mAh Battery -->
             </p>
             <div class="row">
               <div class="col-6"><button type="button" class="btn btn-primary  w-100">Add to cart</button></div>
