changes in single product component

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -18,7 +18,15 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Pricing</a>
         </li>
-      
+        <li class="nav-item">
+          <button type="button" class="btn btn-primary position-relative">
+            My Cart
+            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+             0
+              <span class="visually-hidden">unread messages</span>
+            </span>
+          </button>
+        </li>
       </ul>
     </div>
   </div>
