--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,9 @@
+
+<!-- Navbar Here -->
+
+<app-navbar></app-navbar>
+
+
 <div class="container-fluid my-5">
       
     <div class="d-flex align-items-center justify-content-center">
@@ -11,3 +17,6 @@
 
     
 </div>
+
+<app-footer></app-footer>
+  
