--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg sticky-top shadow" > 
-  <div class="container-fluid ">
+<nav class="navbar navbar-expand-lg sticky-top shadow">
+  <div class="container-fluid">
     <a class="navbar-brand fw-bold fs-3" href="#">
       <img src="assets/shopper.png" alt="Logo" width="30" height="24" id="logo" class="d-inline-block align-text-top">
       Shopsy
@@ -8,9 +8,9 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
+          <a class="nav-link active" aria-current="page" routerLink="/home">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Features</a>
@@ -18,11 +18,16 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Pricing</a>
         </li>
+      </ul>
+      <ul class="navbar-nav ms-auto mb-4 mb-lg-0">
         <li class="nav-item">
+          <button class="btn btn-danger position-relative mx-1" (click)="logout()">Logout</button>
+        </li>
+        <li class="nav-item  mt-4 mt-lg-0">
           <button type="button" class="btn btn-primary position-relative">
             My Cart
             <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-             0
+              0
               <span class="visually-hidden">unread messages</span>
             </span>
           </button>
