--- a/src/app/single-product-page/single-product-page.component.html
+++ b/src/app/single-product-page/single-product-page.component.html
@@ -1,4 +1,4 @@
-
+<app-navbar></app-navbar>
 
     <!-- Example Code -->
 
@@ -56,6 +56,7 @@
 
     <!-- <app-new-products> </app-new-products> -->
 
+    <app-footer></app-footer>
   
     
 
