--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,12 +2,12 @@
     <h1>Shopsy Login</h1>
     <form class="p-5 rounded-3" style="background-color: #ecd448;" [formGroup]="form" (ngSubmit)="onSubmit()">
         <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Username</label>
+          <label for="exampleInputEmail1" class="form-label">Enter Username</label>
           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" formControlName="username">
           <!-- <div class="form-text" id="basic-addon4">*hint: user = abhishek</div> -->
         </div>
         <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Password</label>
+          <label for="exampleInputPassword1" class="form-label">Enter Password</label>
           <input type="password" class="form-control" id="exampleInputPassword1"  formControlName="password">
           <!-- <div class="form-text" id="basic-addon4">*hint: Password = Pass&#64;123</div> -->
         </div>
