added skelaton loader

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,22 +1,21 @@
-
-<!-- Navbar Here -->
-
 <app-navbar></app-navbar>
 
-
 <div class="container-fluid my-5">
-      
-    <div class="d-flex align-items-center justify-content-center">
-          <h2 class="fw-bold" style="color: #172774;">Shopsy's<span class="badge  mx-2" style="background-color: #FF6500;">New Launches</span></h2>
-    </div>
-    <app-carousel></app-carousel> 
-    <app-filters (productsByPrice)="productsByPrice($event)"></app-filters>
-    <app-catogory-btns (updateProducts)="updateProducts($event)" ></app-catogory-btns>
-    <app-card [childArray]="products"></app-card>
-
-
-    
+  <div class="d-flex align-items-center justify-content-center">
+    <h2 class="fw-bold" style="color: #172774;">
+      Shopsy's <span class="badge mx-2" style="background-color: #FF6500;">New Launches</span>
+    </h2>
+  </div>
+  <app-carousel></app-carousel>
+  <app-filters (productsByPrice)="productsByPrice($event)"></app-filters>
+  <app-catogory-btns (updateProducts)="updateProducts($event)"></app-catogory-btns>
+  
+  <ng-container *ngIf="isLoading; else content">
+    <ngx-skeleton-loader count="5" appearance="line"></ngx-skeleton-loader>
+  </ng-container>
+  <ng-template #content>
+    <app-card [childArray]="products" [isLoading]="isLoading"></app-card>
+  </ng-template>
 </div>
 
 <app-footer></app-footer>
-  
