home.comp.html updated

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
 <div class="container-fluid my-5">
   <div class="d-flex align-items-center justify-content-center">
     <h2 class="fw-bold" style="color: #172774;">
-      Shopsy's <span class="badge mx-2" style="background-color: #FF6500;">New Launches</span>
+      Abhi's <span class="badge mx-2" style="background-color: #FF6500;">New Launches</span>
     </h2>
   </div>
   <app-carousel></app-carousel>
